package nextstep.security;

public interface UserDetails {
    String getUsername();

    String getPassword();
}
