@startuml
'https://plantuml.com/class-diagram

package app {
    class Member
    class MemberRepository
}

Member <- MemberRepository

package security {
    class BasicAuthenticationInterceptor
    class UsernamePasswordAuthenticationInterceptor

    interface UserDetails
    interface UserDetailsService
}

'Member ..|> UserDetails
MemberRepository ..|> UserDetailsService

UserDetailsService <-- BasicAuthenticationInterceptor
UserDetailsService <-- UsernamePasswordAuthenticationInterceptor

UserDetails <-- BasicAuthenticationInterceptor
UserDetails <-- UsernamePasswordAuthenticationInterceptor
UserDetails <- UserDetailsService



@enduml